[package]
name = "misskey-api"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[features]
default = ["12-47-0"]

12-47-0 = ["12-39-0"]
12-39-0 = ["12-37-0"]
12-37-0 = ["12-31-0"]
12-31-0 = ["12-29-0"]
12-29-0 = ["12-28-0"]
12-28-0 = ["12-27-0"]
12-27-0 = ["12-19-0"]
12-19-0 = ["12-13-0"]
12-13-0 = ["12-10-0"]
12-10-0 = ["12-9-0"]
12-9-0 = ["12-8-0"]
12-8-0 = ["12-5-0"]
12-5-0 = []

[dependencies]
misskey-core = { path = "../misskey-core" }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.1", features = ["serde"] }
async-trait = "0.1.35"
derive_more = "0.99.5"
strum_macros = "0.19"
typed-builder = "0.7"

[dev-dependencies]
misskey-http = { path = "../misskey-http", features = ["inspect-contents"] }
misskey-websocket = { path = "../misskey-websocket", features = ["inspect-contents"] }
tokio = { version = "0.2.22", features = ["macros", "fs"] }
futures = "0.3"
uuid = { version = "0.8.1", features = ["v4"] }
reqwest = "0.10.7"
lazy_static = "1.4.0"
mime = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
