[package]
name = "misskey-api"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"
repository = "https://github.com/coord-e/misskey-rs.git"
homepage = "https://github.com/coord-e/misskey-rs"
description = "API datatypes of Misskey, including requests/responses of endpoints and messages on channels"
documentation = "https://docs.rs/misskey-api/0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["async", "misskey"]
categories = ["api-bindings"]

[features]
default = ["12-47-0"]

12-47-2 = ["12-47-0"]
12-47-0 = ["12-39-0"]
12-39-0 = ["12-37-0"]
12-37-0 = ["12-31-0"]
12-31-0 = ["12-29-0"]
12-29-0 = ["12-28-0"]
12-28-0 = ["12-27-0"]
12-27-0 = ["12-19-0"]
12-19-0 = ["12-13-0"]
12-13-0 = ["12-10-0"]
12-10-0 = ["12-9-0"]
12-9-0 = ["12-8-0"]
12-8-0 = ["12-5-0"]
12-5-0 = []

[dependencies]
misskey-core = { path = "../misskey-core", version = "0.1.0" }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
url = { version = "2.1", features = ["serde"] }
derive_more = "0.99.5"
strum_macros = "0.19"
typed-builder = "0.7"

[dev-dependencies]
misskey-http = { path = "../misskey-http", version = "0.1.0", features = ["inspect-contents"] }
misskey-websocket = { path = "../misskey-websocket", version = "0.1.0", features = ["inspect-contents"] }
tokio = { version = "0.2.22", features = ["macros", "fs", "time"] }
futures = "0.3"
uuid = { version = "0.8.1", features = ["v4"] }
reqwest = "0.10.7"
lazy_static = "1.4.0"
async-trait = "0.1.35"
mime = "0.3"
env_logger = "0.7"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
