[package]
name = "misskey-api"
version = "0.2.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2021"
repository = "https://github.com/coord-e/misskey-rs.git"
homepage = "https://github.com/coord-e/misskey-rs"
description = "API bindings of Misskey, including requests/responses of endpoints and messages on channels"
documentation = "https://docs.rs/misskey-api/0.2.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["async", "misskey"]
categories = ["api-bindings"]

[features]
default = ["aid"]

13-4-0 = ["13-3-2"]
13-3-2 = ["13-3-0"]
13-3-0 = ["13-2-4"]
13-2-4 = ["13-2-3"]
13-2-3 = ["13-1-1"]
13-1-1 = ["13-1-0"]
13-1-0 = ["13-0-0"]
13-0-0 = ["12-112-3"]
12-112-3 = ["12-112-0"]
12-112-0 = ["12-111-0"]
12-111-0 = ["12-109-0"]
12-109-0 = ["12-108-0"]
12-108-0 = ["12-107-0"]
12-107-0 = ["12-106-0"]
12-106-0 = ["12-105-0"]
12-105-0 = ["12-104-0"]
12-104-0 = ["12-102-0"]
12-102-0 = ["12-99-0"]
12-99-0 = ["12-98-0"]
12-98-0 = ["12-96-0"]
12-96-0 = ["12-95-0"]
12-95-0 = ["12-93-0"]
12-93-0 = ["12-92-0"]
12-92-0 = ["12-91-0"]
12-91-0 = ["12-89-1"]
12-89-1 = ["12-89-0"]
12-89-0 = ["12-88-0"]
12-88-0 = ["12-82-0"]
12-82-0 = ["12-81-0"]
12-81-0 = ["12-80-0"]
12-80-0 = ["12-79-2"]
12-79-2 = ["12-79-0"]
12-79-0 = ["12-77-1"]
12-77-1 = ["12-77-0"]
12-77-0 = ["12-75-0"]
12-75-0 = ["12-71-0"]
12-71-0 = ["12-70-0"]
12-70-0 = ["12-69-0"]
12-69-0 = ["12-67-0"]
12-67-0 = ["12-66-0"]
12-66-0 = ["12-65-4"]
12-65-4 = ["12-63-0"]
12-63-0 = ["12-62-2"]
12-62-2 = ["12-62-0"]
12-62-0 = ["12-61-0"]
12-61-0 = ["12-60-0"]
12-60-0 = ["12-58-0"]
12-58-0 = ["12-57-0"]
12-57-0 = ["12-55-0"]
12-55-0 = ["12-51-0"]
12-51-0 = ["12-49-0"]
12-49-0 = ["12-48-0"]
12-48-0 = ["12-47-0"]
12-47-0 = ["12-42-0"]
12-42-0 = ["12-39-0"]
12-39-0 = ["12-37-0"]
12-37-0 = ["12-31-0"]
12-31-0 = ["12-29-0"]
12-29-0 = ["12-28-0"]
12-28-0 = ["12-27-0"]
12-27-0 = ["12-19-0"]
12-19-0 = ["12-13-0"]
12-13-0 = ["12-10-0"]
12-10-0 = ["12-9-0"]
12-9-0 = ["12-8-0"]
12-8-0 = ["12-5-0"]
12-5-0 = []

aid = []
meid = []
ulid = []
objectid = []

[dependencies]
misskey-core = { path = "../misskey-core", version = "0.2.0" }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ulid_crate = { package = "ulid", version = "0.5", features = ["serde"] }
url = { version = "2.1", features = ["serde"] }
thiserror = "1.0.2"
strum_macros = "0.24"
typed-builder = "0.11"
mime = "0.3"
rustversion = "1.0"

[dev-dependencies]
misskey-http = { path = "../misskey-http", features = ["inspect-contents"] }
misskey-websocket = { path = "../misskey-websocket", features = ["inspect-contents"] }
misskey-test = { path = "../misskey-test", features = ["misskey-http", "misskey-websocket"] }
tokio = { version = "1.0", features = ["macros", "fs", "time", "rt-multi-thread"] }
ulid_crate = { package = "ulid", version = "0.5" }
rand = "0.8"
futures = "0.3"
isahc = "1.0"
async-trait = "0.1.35"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
