[package]
name = "misskey-core"
version = "0.2.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2018"
repository = "https://github.com/coord-e/misskey-rs.git"
homepage = "https://github.com/coord-e/misskey-rs"
description = "Core traits and types in misskey-rs"
documentation = "https://docs.rs/misskey-core/0.2.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["async", "client", "misskey"]

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
mime = "0.3"
serde_json = "1.0"
futures-core = "0.3"
futures-sink = "0.3"
