[package]
name = "misskey-http"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"
repository = "https://github.com/coord-e/misskey-rs.git"
homepage = "https://github.com/coord-e/misskey-rs"
description = "Asynchronous HTTP-based client implementation for Misskey"
documentation = "https://docs.rs/misskey-http/0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["async", "http", "client", "misskey"]
categories = ["web-programming::http-client"]

[features]
inspect-contents = ["log"]

[dependencies]
misskey-core = { path = "../misskey-core" }
serde = "1.0"
serde_json = "1.0"
derive_more = "0.99.5"
url = "2.1"
isahc = "0.9"
mime = "0.3"
common-multipart-rfc7578 = "0.1"
async-dup = "1.2"
futures = { version = "0.3", default-features = false, features = ["compat"] }
log = { version = "0.4", optional = true }

[dev-dependencies]
misskey-api = { path = "../misskey-api" }
uuid = { version = "0.8.1", features = ["v4"] }
tokio = { version = "0.2", features = ["macros", "rt-core"] }
async-std = { version = "1.6", features = ["attributes"] }
env_logger = "0.7"
