[package]
name = "misskey-http"
version = "0.2.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2021"
repository = "https://github.com/coord-e/misskey-rs.git"
homepage = "https://github.com/coord-e/misskey-rs"
description = "Asynchronous HTTP-based client implementation for Misskey"
documentation = "https://docs.rs/misskey-http/0.2.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["async", "http", "client", "misskey"]
categories = ["web-programming::http-client"]

[features]
inspect-contents = ["log"]

[dependencies]
misskey-core = { path = "../misskey-core", version = "0.2.0" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.2"
url = "2.2.2"
isahc = "1.0"
# openssl-sys <= 0.9.44 may fails to build because of rustc_version
openssl-sys = "0.9.45"
mime = "0.3"
common-multipart-rfc7578 = "0.6.0"
async-dup = "1.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
log = { version = "0.4", optional = true }

[dev-dependencies]
misskey-api = { path = "../misskey-api" }
misskey-test = { path = "../misskey-test" }
uuid = { version = "0.8.1", features = ["v4"] }
tokio = { version = "1.0", features = ["macros", "rt"] }
async-std = { version = "1.6", features = ["attributes"] }
