[package]
name = "misskey-streaming"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[dependencies]
misskey = { path = "../misskey" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.13", features = ["serde"] }
url = "2.1.1"
async-trait = "0.1.36"
err-derive = "0.2.4"
futures = "0.3.5"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio-tungstenite = { version = "0.11.0", features = ["tls"] }
tokio = "0.2"
tokio-native-tls = "0.1"
log = "0.4.11"
derive_more = "0.99.9"
derivative = "2.1.1"
