[package]
name = "misskey-websocket"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"
repository = "https://github.com/coord-e/misskey-rs.git"
homepage = "https://github.com/coord-e/misskey-rs"
description = "Asynchronous WebSocket-based client implementation for Misskey"
documentation = "https://docs.rs/misskey-websocket/0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["async", "websocket", "client", "misskey"]
categories = ["web-programming::websocket"]

[features]
default = ["tokio-runtime"]

inspect-contents = []
tokio-runtime = ["tokio", "async-tungstenite/tokio-runtime"]
async-std-runtime = ["async-std", "async-tungstenite/async-std-runtime"]

[dependencies]
misskey-core = { path = "../misskey-core", version = "0.1.0" }
serde = { version = "1.0.83", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.12", features = ["serde"] }
url = "2.1"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-tungstenite = { version = "0.8", features = ["async-tls"] }
log = "0.4"
thiserror = "1.0.2"
async-rwlock = "1.0"

async-std = { version = "1.6.3", default-features = false, features = ["std"], optional = true }
tokio = { version = "0.2", default-features = false, features = ["time"], optional = true }

[dev-dependencies]
misskey-api = { path = "../misskey-api" }
misskey-test = { path = "../misskey-test" }
async-std = { version = "1.6.3", features = ["attributes"] }
tokio = { version = "0.2", features = ["macros", "rt-core"] }
