[package]
name = "misskey"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.1", features = ["serde"] }
derivative = "2.1"
async-trait = "0.1.35"
derive_more = "0.99.5"
