[package]
name = "misskey"
version = "0.2.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2021"
repository = "https://github.com/coord-e/misskey-rs.git"
homepage = "https://github.com/coord-e/misskey-rs"
description = "Asynchronous client for Misskey"
documentation = "https://docs.rs/misskey/0.2.0"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["async", "http", "websocket", "client", "misskey"]
categories = ["api-bindings", "web-programming::http-client", "web-programming::websocket"]

[features]
default = ["http-client", "websocket-client", "tokio-runtime", "aid"]

12-102-0 = ["misskey-api/12-102-0", "misskey-util/12-102-0"]
12-99-0 = ["misskey-api/12-99-0", "misskey-util/12-99-0"]
12-98-0 = ["misskey-api/12-98-0", "misskey-util/12-98-0"]
12-96-0 = ["misskey-api/12-96-0", "misskey-util/12-96-0"]
12-95-0 = ["misskey-api/12-95-0", "misskey-util/12-95-0"]
12-93-0 = ["misskey-api/12-93-0", "misskey-util/12-93-0"]
12-92-0 = ["misskey-api/12-92-0", "misskey-util/12-92-0"]
12-91-0 = ["misskey-api/12-91-0", "misskey-util/12-91-0"]
12-89-1 = ["misskey-api/12-89-1", "misskey-util/12-89-1"]
12-89-0 = ["misskey-api/12-89-0", "misskey-util/12-89-0"]
12-88-0 = ["misskey-api/12-88-0", "misskey-util/12-88-0"]
12-82-0 = ["misskey-api/12-82-0", "misskey-util/12-82-0"]
12-81-0 = ["misskey-api/12-81-0", "misskey-util/12-81-0"]
12-80-0 = ["misskey-api/12-80-0", "misskey-util/12-80-0"]
12-79-2 = ["misskey-api/12-79-2", "misskey-util/12-79-2"]
12-79-0 = ["misskey-api/12-79-0", "misskey-util/12-79-0"]
12-77-1 = ["misskey-api/12-77-1", "misskey-util/12-77-1"]
12-77-0 = ["misskey-api/12-77-0", "misskey-util/12-77-0"]
12-75-0 = ["misskey-api/12-75-0", "misskey-util/12-75-0"]
12-71-0 = ["misskey-api/12-71-0", "misskey-util/12-71-0"]
12-70-0 = ["misskey-api/12-70-0", "misskey-util/12-70-0"]
12-69-0 = ["misskey-api/12-69-0", "misskey-util/12-69-0"]
12-67-0 = ["misskey-api/12-67-0", "misskey-util/12-67-0"]
12-66-0 = ["misskey-api/12-66-0", "misskey-util/12-66-0"]
12-65-4 = ["misskey-api/12-65-4", "misskey-util/12-65-4"]
12-63-0 = ["misskey-api/12-63-0", "misskey-util/12-63-0"]
12-62-2 = ["misskey-api/12-62-2", "misskey-util/12-62-2"]
12-62-0 = ["misskey-api/12-62-0", "misskey-util/12-62-0"]
12-61-0 = ["misskey-api/12-61-0", "misskey-util/12-61-0"]
12-60-0 = ["misskey-api/12-60-0", "misskey-util/12-60-0"]
12-58-0 = ["misskey-api/12-58-0", "misskey-util/12-58-0"]
12-57-0 = ["misskey-api/12-57-0", "misskey-util/12-57-0"]
12-55-0 = ["misskey-api/12-55-0", "misskey-util/12-55-0"]
12-51-0 = ["misskey-api/12-51-0", "misskey-util/12-51-0"]
12-49-0 = ["misskey-api/12-49-0", "misskey-util/12-49-0"]
12-48-0 = ["misskey-api/12-48-0", "misskey-util/12-48-0"]
12-47-0 = ["misskey-api/12-47-0", "misskey-util/12-47-0"]
12-42-0 = ["misskey-api/12-42-0", "misskey-util/12-42-0"]
12-39-0 = ["misskey-api/12-39-0", "misskey-util/12-39-0"]
12-37-0 = ["misskey-api/12-37-0", "misskey-util/12-37-0"]
12-31-0 = ["misskey-api/12-31-0", "misskey-util/12-31-0"]
12-29-0 = ["misskey-api/12-29-0", "misskey-util/12-29-0"]
12-28-0 = ["misskey-api/12-28-0", "misskey-util/12-28-0"]
12-27-0 = ["misskey-api/12-27-0", "misskey-util/12-27-0"]
12-19-0 = ["misskey-api/12-19-0", "misskey-util/12-19-0"]
12-13-0 = ["misskey-api/12-13-0", "misskey-util/12-13-0"]
12-10-0 = ["misskey-api/12-10-0", "misskey-util/12-10-0"]
12-9-0 = ["misskey-api/12-9-0", "misskey-util/12-9-0"]
12-8-0 = ["misskey-api/12-8-0", "misskey-util/12-8-0"]
12-5-0 = ["misskey-api/12-5-0", "misskey-util/12-5-0"]

aid = ["misskey-api/aid", "misskey-util/aid"]
meid = ["misskey-api/meid", "misskey-util/meid"]
ulid = ["misskey-api/ulid", "misskey-util/ulid"]
objectid = ["misskey-api/objectid", "misskey-util/objectid"]

http-client = ["misskey-http"]
websocket-client = ["misskey-websocket"]

tokio-runtime = ["misskey-websocket/tokio-runtime"]
async-std-runtime = ["misskey-websocket/async-std-runtime"]

inspect-contents = ["misskey-http/inspect-contents", "misskey-websocket/inspect-contents"]

[dependencies]
misskey-core = { path = "../misskey-core", version = "0.2.0" }
misskey-util = { path = "../misskey-util", version = "0.1.0", default-features = false }
misskey-api = { path = "../misskey-api", version = "0.2.0", default-features = false }
misskey-websocket = { path = "../misskey-websocket", version = "0.2.0", default-features = false, optional = true }
misskey-http = { path = "../misskey-http", version = "0.2.0", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
anyhow = "1.0"
futures = "0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
