[package]
name = "follow-back"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"
publish = false

[dependencies]
misskey = { path = "../../misskey", version = "0.2.0", features = ["websocket-client"] }
tokio = { version = "1.0", features = ["full"] }
structopt = "0.3.16"
url = "2.1.1"
futures = "0.3.5"
anyhow = "1.0"
