[package]
name = "timeline"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[dependencies]
misskey-websocket = { path = "../../misskey-websocket" }
misskey-api = { path = "../../misskey-api" }
misskey-core = { path = "../../misskey-core" }
structopt = "0.3.16"
async-std = { version = "1.6.3", default_features = false }
url = "2.1.1"
futures = "0.3.5"
derive_more = "0.99.5"
